Addition of few more assignment solutions

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -581,13 +581,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "1ec47db4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter valid email id:joshi.nirav21@gmail.com\n",
+      "Please provide password:kzegjjhbmwltuwqt\n",
+      "<table cellpadding=3D\"0\" cellspacing=3D\"0\" border=\n",
+      "=3D\"0\" style=3D\"width:100%;\"><tr style=3D\"font-size:0;\"><td align=3D\"left\" =\n",
+      "style=3D\"vertical-align:top;\"><table cellpadding=3D\"0\" cellspacing=3D\"0\" bo=\n",
+      "rder=3D\"0\" style=3D\"font-size:0;\"><tr style=3D\"font-size:0;\"><td align=3D\"l=\n",
+      "eft\" style=3D\"padding:0 0 20px;vertical-align:top;\"><table cellpadding=3D\"0=\n",
+      "\" cellspacing=3D\"0\" border=3D\"0\" style=3D\"font-size:0;\"><tr style=3D\"font-s=\n",
+      "ize:0;\"><td align=3D\"left\" style=3D\"padding:0;vertical-align:top;\"><table c=\n",
+      "ellpadding=3D\"0\" cellspacing=3D\"0\" border=3D\"0\" style=3D\"width:100%;font-si=\n",
+      "ze:0;\"><tr style=3D\"font-size:0;\"><td align=3D\"left\" style=3D\"padding:10px =\n",
+      "0;vertical-align:top;\"><table cellpadding=3D\"0\" cellspacing=3D\"0\" border=\n",
+      "=3D\"0\" style=3D\"width:100%;font-size:0;\"><tr style=3D\"font-size:12px;color:=\n",
+      "#000001;font-style:normal;font-weight:700;white-space:nowrap;\"><td align=\n",
+      "=3D\"left\" style=3D\"padding:0;vertical-align:top;font-family:Arial;\">Nirav&n=\n",
+      "bsp;Jagdishbhai&nbsp;Joshi<span style=3D\"font-family:remialcxesans;font-siz=\n",
+      "e:1px;color:#FFFFFF;line-height:1px;\">&#8203;</span></td></tr><tr style=3D\"=\n",
+      "font-size:0;\"><td align=3D\"left\" style=3D\"padding:1px 0 0;vertical-align:to=\n",
+      "p;\"><table cellpadding=3D\"0\" cellspacing=3D\"0\" border=3D\"0\" style=3D\"font-s=\n",
+      "ize:0;color:#000001;font-style:normal;font-weight:400;white-space:nowrap;\">=\n",
+      "<tr style=3D\"font-size:12px;\"><td align=3D\"left\" style=3D\"vertical-align:to=\n",
+      "p;font-family:Arial;\">Senior&nbsp;Software&nbsp;Developer</td></tr></table>=\n",
+      "</td></tr><tr style=3D\"font-size:12px;color:#000001;font-style:normal;font-=\n",
+      "weight:700;white-space:nowrap;\"><td align=3D\"left\" style=3D\"padding:1px 0 0=\n",
+      ";vertical-align:top;font-family:Arial;\">Komatsu&nbsp;Mining&nbsp;Corp.&nbsp=\n",
+      ";Group<br />&#8203;<span style=3D\"font-weight:400;\">Joy&nbsp;Global&nbsp;(I=\n",
+      "ndia)&nbsp;Private&nbsp;Limited</span></td></tr><tr style=3D\"font-size:0;\">=\n",
+      "<td align=3D\"left\" style=3D\"padding:1px 0 0;vertical-align:top;\"><table cel=\n",
+      "lpadding=3D\"0\" cellspacing=3D\"0\" border=3D\"0\" style=3D\"font-size:0;color:#0=\n",
+      "00001;font-style:normal;font-weight:400;white-space:nowrap;\"><tr style=3D\"f=\n",
+      "ont-size:12px;\"><td align=3D\"left\" style=3D\"vertical-align:top;font-family:=\n",
+      "Arial;\">Pentagon&nbsp;Tower&nbsp;4,&nbsp;Unit&nbsp;402,&nbsp;4th&nbsp;Floor=\n",
+      "<br />Magarpatta&nbsp;City,&nbsp;Hadapsar</td><td align=3D\"left\" style=3D\"v=\n",
+      "ertical-align:top;font-size:0;\"></td></tr></table></td></tr><tr style=3D\"fo=\n",
+      "nt-size:0;\"><td align=3D\"left\" style=3D\"padding:1px 0 0;vertical-align:top;=\n",
+      "\"><table cellpadding=3D\"0\" cellspacing=3D\"0\" border=3D\"0\" style=3D\"font-siz=\n",
+      "e:0;color:#000001;font-style:normal;font-weight:400;white-space:nowrap;\"><t=\n",
+      "r style=3D\"font-size:12px;\"><td align=3D\"left\" style=3D\"vertical-align:top;=\n",
+      "font-family:Arial;\">Pune</td><td align=3D\"left\" style=3D\"vertical-align:top=\n",
+      ";font-size:0;\"></td><td align=3D\"left\" style=3D\"vertical-align:top;font-fam=\n",
+      "ily:Arial;\">,&nbsp;</td><td align=3D\"left\" style=3D\"vertical-align:top;font=\n",
+      "-family:Arial;\">MH</td><td align=3D\"left\" style=3D\"vertical-align:top;font-=\n",
+      "size:0;\"></td><td align=3D\"left\" style=3D\"vertical-align:top;font-family:Ar=\n",
+      "ial;\">&nbsp;<br /></td><td align=3D\"left\" style=3D\"vertical-align:top;font-=\n",
+      "family:Arial;\">411028</td><td align=3D\"left\" style=3D\"vertical-align:top;fo=\n",
+      "nt-size:0;\"></td></tr></table></td></tr><tr style=3D\"font-size:0;\"><td alig=\n",
+      "n=3D\"left\" style=3D\"padding:1px 0 0;vertical-align:top;\"><table cellpadding=\n",
+      "=3D\"0\" cellspacing=3D\"0\" border=3D\"0\" style=3D\"font-size:0;color:#000001;fo=\n",
+      "nt-style:normal;font-weight:400;white-space:nowrap;\"><tr style=3D\"font-size=\n",
+      ":12px;\"><td align=3D\"left\" style=3D\"vertical-align:top;font-family:Arial;\">=\n",
+      "India</td></tr></table></td></tr><tr style=3D\"font-size:0;\"><td align=3D\"le=\n",
+      "ft\" style=3D\"padding:1px 0 0;vertical-align:top;\"></td></tr><tr style=3D\"fo=\n",
+      "nt-size:0;\"><td align=3D\"left\" style=3D\"padding:1px 0 0;vertical-align:top;=\n",
+      "\"></td></tr><tr style=3D\"font-size:0;line-height:normal;\"><td align=3D\"left=\n",
+      "\" style=3D\"padding:0;vertical-align:top;\"><a href=3D\"https://mining.komatsu=\n",
+      "/\" target=3D\"_blank\" id=3D\"LPlnk689713\" style=3D\"text-decoration:none;\"><im=\n",
+      "g src=3D\"cid:image958524.png@7C7875BE.597ED5AF\" width=3D\"250\" border=3D\"0\" =\n",
+      "alt=3D\"\" style=3D\"width:250px;min-width:250px;max-width:250px;font-size:0;\"=\n",
+      " /></a></td></tr></table></td></tr></table></td></tr></table></td></tr></ta=\n",
+      "ble></td></tr></table>\n"
+     ]
+    }
+   ],
    "source": [
     "## Assignment 14\n",
-    "## write a function which will be able to access your mail"
+    "## write a function which will be able to access your mail\n",
+    "\n",
+    "# Importing libraries\n",
+    "import imaplib, email, re\n",
+    "\n",
+    "def read_email_for_user(user, password):\n",
+    "    \"\"\"\n",
+    "    Based on provided value into argument, function will going to search & fetch email body content\n",
+    "    \"\"\"\n",
+    "    imap_url = 'imap.gmail.com'\n",
+    "\n",
+    "    # Function to get email content part i.e its body part\n",
+    "    def get_body(msg):\n",
+    "        if msg.is_multipart():\n",
+    "            return get_body(msg.get_payload(0))\n",
+    "        else:\n",
+    "            return msg.get_payload(None, True)\n",
+    "\n",
+    "    # Function to search for a key value pair\n",
+    "    def search(key, value, con):\n",
+    "        result, data = con.search(None, key, '\"{}\"'.format(value))\n",
+    "        return data\n",
+    "\n",
+    "    # Function to get the list of emails under this label\n",
+    "    def get_emails(result_bytes):\n",
+    "        msgs = [] # all the email data are pushed inside an array\n",
+    "        for num in result_bytes[0].split():\n",
+    "            typ, data = con.fetch(num, '(RFC822)')\n",
+    "            msgs.append(data)\n",
+    "\n",
+    "        return msgs\n",
+    "\n",
+    "    # this is done to make SSL connection with GMAIL\n",
+    "    con = imaplib.IMAP4_SSL(imap_url)\n",
+    "\n",
+    "    # logging the user in\n",
+    "    con.login(user, password)\n",
+    "\n",
+    "    # calling function to check for email under this label\n",
+    "    con.select('Inbox')\n",
+    "\n",
+    "    # fetching emails from this user \"tu**h*****1@gmail.com\"\n",
+    "    msgs = get_emails(search('FROM', 'nirav.joshi@mining.komatsu', con))\n",
+    "\n",
+    "    # Uncomment this to see what actually comes as data\n",
+    "    #print(msgs)\n",
+    "\n",
+    "\n",
+    "    # Finding the required content from our msgs\n",
+    "    # User can make custom changes in this part to\n",
+    "    # fetch the required content he / she needs\n",
+    "\n",
+    "    # printing them by the order they are displayed in your gmail\n",
+    "    for msg in msgs[::-1]:\n",
+    "        for sent in msg:\n",
+    "            if type(sent) is tuple:\n",
+    "\n",
+    "                # encoding set as utf-8\n",
+    "                content = str(sent[1], 'utf-8')\n",
+    "                data = str(content)\n",
+    "\n",
+    "                # Handling errors related to unicodenecode\n",
+    "                try:\n",
+    "                    indexstart = data.find(\"ltr;\")\n",
+    "                    data2 = data[indexstart + 6: len(data)]\n",
+    "                    indexend = data2.find(\"</div>\")\n",
+    "\n",
+    "                    # printtng the required content which we need\n",
+    "                    # to extract from our email i.e our body\n",
+    "                    print(data2[0: indexend])\n",
+    "\n",
+    "                except UnicodeEncodeError as e:\n",
+    "                    pass\n",
+    "\n",
+    "def main():\n",
+    "    regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
+    "    email_id = input('Please enter valid email id:')\n",
+    "    if(not re.fullmatch(regex, email_id)):\n",
+    "        print('Invalid email Id. Please provide valid email id')\n",
+    "        return\n",
+    "    password = input('Please provide password:')\n",
+    "    read_email_for_user(email_id, password)\n",
+    "    \n",
+    "main()"
    ]
   },
   {
