Applying more information related to comments and informative message display to user for mail reading solution

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "1ec47db4",
    "metadata": {},
    "outputs": [
@@ -589,8 +589,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "This program will going to ask 3 inputs from user. \n",
+      " 1. Email Id (from which inbox will going to read) \n",
+      "2. Password \n",
+      "3. Search Email Id (To search and list content, provide emailId)\n",
       "Please enter valid email id:joshi.nirav21@gmail.com\n",
       "Please provide password:kzegjjhbmwltuwqt\n",
+      "Please provide another email id which will going to use for search inbox:nirav.joshi@mining.komatsu\n",
       "<table cellpadding=3D\"0\" cellspacing=3D\"0\" border=\n",
       "=3D\"0\" style=3D\"width:100%;\"><tr style=3D\"font-size:0;\"><td align=3D\"left\" =\n",
       "style=3D\"vertical-align:top;\"><table cellpadding=3D\"0\" cellspacing=3D\"0\" bo=\n",
@@ -659,9 +664,12 @@
     "# Importing libraries\n",
     "import imaplib, email, re\n",
     "\n",
-    "def read_email_for_user(user, password):\n",
+    "def read_email_for_user(user, password, search_inbox_mail_id):\n",
     "    \"\"\"\n",
     "    Based on provided value into argument, function will going to search & fetch email body content\n",
+    "    user: It will email id of user which has Inbox content\n",
+    "    password: It will either password OR App password set up as a application email reading\n",
+    "    search_inbox_mail_id: In order to filter & search inbox, provide this attribute value so that system will search inside Inbox and list it's email content\n",
     "    \"\"\"\n",
     "    imap_url = 'imap.gmail.com'\n",
     "\n",
@@ -696,7 +704,7 @@
     "    con.select('Inbox')\n",
     "\n",
     "    # fetching emails from this user \"tu**h*****1@gmail.com\"\n",
-    "    msgs = get_emails(search('FROM', 'nirav.joshi@mining.komatsu', con))\n",
+    "    msgs = get_emails(search('FROM', search_inbox_mail_id, con))\n",
     "\n",
     "    # Uncomment this to see what actually comes as data\n",
     "    #print(msgs)\n",
@@ -730,12 +738,17 @@
     "\n",
     "def main():\n",
     "    regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
+    "    print('This program will going to ask 3 inputs from user. \\n 1. Email Id (from which inbox will going to read) \\n2. Password \\n3. Search Email Id (To search and list content, provide emailId)')\n",
     "    email_id = input('Please enter valid email id:')\n",
     "    if(not re.fullmatch(regex, email_id)):\n",
     "        print('Invalid email Id. Please provide valid email id')\n",
     "        return\n",
     "    password = input('Please provide password:')\n",
-    "    read_email_for_user(email_id, password)\n",
+    "    search_inbox_mail_id = input('Please provide another email id which will going to use for search inbox:')\n",
+    "    if(not re.fullmatch(regex, search_inbox_mail_id)):\n",
+    "        print('Invalid email Id. Please provide valid email id which will use to search inbox')\n",
+    "        return\n",
+    "    read_email_for_user(email_id, password, search_inbox_mail_id)\n",
     "    \n",
     "main()"
    ]
