Corrent into comment and user showed info

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -738,13 +738,13 @@
     "\n",
     "def main():\n",
     "    regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
-    "    print('This program will going to ask 3 inputs from user. \\n 1. Email Id (from which inbox will going to read) \\n2. Password \\n3. Search Email Id (To search and list content, provide emailId)')\n",
-    "    email_id = input('Please enter valid email id:')\n",
+    "    print('This program will going to ask 3 inputs from user. \\n 1. Gmail Email Id (from which inbox will going to read) \\n2. Password \\n3. Search Email Id (To search and list content, provide emailId)')\n",
+    "    email_id = input('Please enter valid gmail email id:')\n",
     "    if(not re.fullmatch(regex, email_id)):\n",
     "        print('Invalid email Id. Please provide valid email id')\n",
     "        return\n",
     "    password = input('Please provide password:')\n",
-    "    search_inbox_mail_id = input('Please provide another email id which will going to use for search inbox:')\n",
+    "    search_inbox_mail_id = input('Please provide another email id which will going to use for search gmail inbox:')\n",
     "    if(not re.fullmatch(regex, search_inbox_mail_id)):\n",
     "        print('Invalid email Id. Please provide valid email id which will use to search inbox')\n",
     "        return\n",
