Adding function which will list available folders inside mail inbox

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -694,6 +694,16 @@
     "\n",
     "        return msgs\n",
     "\n",
+    "    # Function to List mailboxes (folders)\n",
+    "    def list_mailbox_folders(con):\n",
+    "        response_code, folders = con.list()\n",
+    "        print(response_code)\n",
+    "        print('Available mailbox(folders):')\n",
+    "        for folder_details_raw in folders:\n",
+    "            folder_detail = folder_details_raw.decode().split()\n",
+    "            print(f\"-{folder_detail[-1]}\")\n",
+    "\n",
+    "\n",
     "    # this is done to make SSL connection with GMAIL\n",
     "    con = imaplib.IMAP4_SSL(imap_url)\n",
     "\n",
@@ -703,6 +713,9 @@
     "    # calling function to check for email under this label\n",
     "    con.select('Inbox')\n",
     "\n",
+    "    # Calling function to list available folders inside Inbox\n",
+    "    list_mailbox_folders(con)\n",
+    "    \n",
     "    # fetching emails from this user \"tu**h*****1@gmail.com\"\n",
     "    msgs = get_emails(search('FROM', search_inbox_mail_id, con))\n",
     "\n",
@@ -738,7 +751,7 @@
     "\n",
     "def main():\n",
     "    regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
-    "    print('This program will going to ask 3 inputs from user. \\n 1. Gmail Email Id (from which inbox will going to read) \\n2. Password \\n3. Search Email Id (To search and list content, provide emailId)')\n",
+    "    print('This program will going to ask 3 inputs from user.\\n 1. Gmail Email Id (from which inbox will going to read) \\n2. Password \\n3. Search Email Id (To search and list content, provide emailId)')\n",
     "    email_id = input('Please enter valid gmail email id:')\n",
     "    if(not re.fullmatch(regex, email_id)):\n",
     "        print('Invalid email Id. Please provide valid email id')\n",
