Adding assignment solution for send email

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -757,6 +757,9 @@
     "        print('Invalid email Id. Please provide valid email id')\n",
     "        return\n",
     "    password = input('Please provide password:')\n",
+    "    if len(password) == 0:\n",
+    "        print('Please enter valid password')\n",
+    "        return    \n",
     "    search_inbox_mail_id = input('Please provide another email id which will going to use for search gmail inbox:')\n",
     "    if(not re.fullmatch(regex, search_inbox_mail_id)):\n",
     "        print('Invalid email Id. Please provide valid email id which will use to search inbox')\n",
@@ -768,13 +771,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "89cafbfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please provide from email Id:joshi.nirav21@gmail.com\n",
+      "Please provide password for your above entered email id:kzegjjhbmwltuwqt\n",
+      "Please enter to email Id(s) , if you want multiple emailIds into To then enter them comma separated:joshinirav.j2ee@gmail.com,njjoshi0686@gmail.com\n",
+      "Please enter subject value:Hi from NJ\n",
+      "Please provide value for email body:Hi Nirav, This is python mail sender utility sending you email\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "send: 'ehlo [192.168.56.1]\\r\\n'\n",
+      "reply: b'250-smtp.gmail.com at your service, [150.107.191.106]\\r\\n'\n",
+      "reply: b'250-SIZE 35882577\\r\\n'\n",
+      "reply: b'250-8BITMIME\\r\\n'\n",
+      "reply: b'250-AUTH LOGIN PLAIN XOAUTH2 PLAIN-CLIENTTOKEN OAUTHBEARER XOAUTH\\r\\n'\n",
+      "reply: b'250-ENHANCEDSTATUSCODES\\r\\n'\n",
+      "reply: b'250-PIPELINING\\r\\n'\n",
+      "reply: b'250-CHUNKING\\r\\n'\n",
+      "reply: b'250 SMTPUTF8\\r\\n'\n",
+      "reply: retcode (250); Msg: b'smtp.gmail.com at your service, [150.107.191.106]\\nSIZE 35882577\\n8BITMIME\\nAUTH LOGIN PLAIN XOAUTH2 PLAIN-CLIENTTOKEN OAUTHBEARER XOAUTH\\nENHANCEDSTATUSCODES\\nPIPELINING\\nCHUNKING\\nSMTPUTF8'\n",
+      "send: 'AUTH PLAIN AGpvc2hpLm5pcmF2MjFAZ21haWwuY29tAGt6ZWdqamhibXdsdHV3cXQ=\\r\\n'\n",
+      "reply: b'235 2.7.0 Accepted\\r\\n'\n",
+      "reply: retcode (235); Msg: b'2.7.0 Accepted'\n",
+      "send: 'mail FROM:<joshi.nirav21@gmail.com> size=169\\r\\n'\n",
+      "reply: b'250 2.1.0 OK m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.1.0 OK m19sm31987154pfk.218 - gsmtp'\n",
+      "send: 'rcpt TO:<joshinirav.j2ee@gmail.com>\\r\\n'\n",
+      "reply: b'250 2.1.5 OK m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.1.5 OK m19sm31987154pfk.218 - gsmtp'\n",
+      "send: 'rcpt TO:<njjoshi0686@gmail.com>\\r\\n'\n",
+      "reply: b'250 2.1.5 OK m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.1.5 OK m19sm31987154pfk.218 - gsmtp'\n",
+      "send: 'data\\r\\n'\n",
+      "reply: b'354  Go ahead m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
+      "reply: retcode (354); Msg: b'Go ahead m19sm31987154pfk.218 - gsmtp'\n",
+      "data: (354, b'Go ahead m19sm31987154pfk.218 - gsmtp')\n",
+      "send: b'From: joshi.nirav21@gmail.com\\r\\nTo: joshinirav.j2ee@gmail.com, njjoshi0686@gmail.com\\r\\nSubject:Hi from NJ\\r\\n\\r\\nHi Nirav, This is python mail sender utility sending you email\\r\\n.\\r\\n'\n",
+      "reply: b'250 2.0.0 OK  1641267582 m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.0.0 OK  1641267582 m19sm31987154pfk.218 - gsmtp'\n",
+      "data: (250, b'2.0.0 OK  1641267582 m19sm31987154pfk.218 - gsmtp')\n",
+      "send: 'quit\\r\\n'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mail sent\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "reply: b'221 2.0.0 closing connection m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
+      "reply: retcode (221); Msg: b'2.0.0 closing connection m19sm31987154pfk.218 - gsmtp'\n"
+     ]
+    }
+   ],
    "source": [
     "## Assignment 15\n",
-    "##  write a function by which i can send a mail to anyone\n"
+    "##  write a function by which i can send a mail to anyone\n",
+    "from smtplib import SMTP_SSL, SMTP_SSL_PORT\n",
+    "import re\n",
+    "\n",
+    "def send_email(user, password, recipient, subject, body = 'Hello ! This is test email from Python program'):\n",
+    "    \"\"\"\n",
+    "    This function will going to use to send email. It will require 3 arguments\n",
+    "    user: It is a email id from which user want to send email.\n",
+    "    password: It is either password OR App password value set up inside Gmail settings\n",
+    "    recipient: It is a list type value so that user can have either single or multiple To email Id values.\n",
+    "    subject: It is subject line which will going to show to user as a 'Subject'.\n",
+    "    body: It is a email body which user want to send to recipients.\n",
+    "    \"\"\"\n",
+    "    SMTP_HOST = 'smtp.gmail.com'\n",
+    "    SMTP_USER = user\n",
+    "    SMTP_PASS = password\n",
+    "\n",
+    "    # Craft the email by hand\n",
+    "    from_email = user  # or simply the email address\n",
+    "    to_emails = recipient if isinstance(recipient, list) else [recipient]\n",
+    "    headers = f\"From: {from_email}\\r\\n\"\n",
+    "    headers += f\"To: {', '.join(to_emails)}\\r\\n\" \n",
+    "    headers += f\"Subject:\" + subject + f\"\\r\\n\"\n",
+    "    email_message = headers + \"\\r\\n\" + body  # Blank line needed between headers and body\n",
+    "\n",
+    "    # Connect, authenticate, and send mail\n",
+    "    smtp_server = SMTP_SSL(SMTP_HOST, port=SMTP_SSL_PORT)\n",
+    "    smtp_server.set_debuglevel(1)  # Show SMTP server interactions\n",
+    "    smtp_server.login(SMTP_USER, SMTP_PASS)\n",
+    "    smtp_server.sendmail(from_email, to_emails, email_message)\n",
+    "\n",
+    "    # Disconnect\n",
+    "    smtp_server.quit()\n",
+    "\n",
+    "def validEmailId(email_id):\n",
+    "    \"\"\"\n",
+    "    This function will validate email id returns a boolean\n",
+    "    \"\"\"\n",
+    "    isValid = False\n",
+    "    regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
+    "    isValid = re.fullmatch(regex, email_id)\n",
+    "    return isValid\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    Main execution point to run program\n",
+    "    \"\"\"\n",
+    "    user_email_id = input('Please provide from email Id:')\n",
+    "    regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
+    "    if(not validEmailId(user_email_id)):\n",
+    "        print('Invalid email Id. Please provide valid email id')\n",
+    "        return\n",
+    "    password = input('Please provide password for your above entered email id:')\n",
+    "    if len(password) == 0:\n",
+    "        print('Please enter valid password')\n",
+    "        return\n",
+    "    recipients = input('Please enter to email Id(s) , if you want multiple emailIds into To then enter them comma separated:')\n",
+    "    if len(recipients) > 0 :\n",
+    "        splited_elements = recipients.split(',')\n",
+    "        for element in splited_elements:\n",
+    "                if(not validEmailId(element)):\n",
+    "                    print('Invalid email Id[',element,']. Please provide valid To email id')\n",
+    "                    return\n",
+    "        recipients =  recipients.split(',')                           \n",
+    "    else:\n",
+    "        print('Please provide value for To email Id(s)')\n",
+    "        return\n",
+    "    \n",
+    "    subject = input('Please enter subject value:')\n",
+    "    if len(subject) == 0:\n",
+    "        print('Please provide valid subject')\n",
+    "        return\n",
+    "    \n",
+    "    body = input('Please provide value for email body:')\n",
+    "    try :\n",
+    "        send_email(user_email_id, password, recipients, subject, body)\n",
+    "        print('Mail sent')\n",
+    "    except :\n",
+    "        print('Fail to send an email')\n",
+    "\n",
+    "main()"
    ]
   },
   {
