Changes for assignment 12

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -545,8 +545,23 @@
     "    \n",
     "    shutil.move(src_file_path, dst_dir_path)\n",
     "\n",
-    "move_file('C:/Users/Nirav Joshi/Downloads/Dattabavni_Gatha.pdf', 'C:/NJ/Learning/Python/python-practice-examples')    \n",
-    "#move_dir('C:/Users/Nirav Joshi/Downloads/Dattabavni_Gatha.pdf','C:/NJ/Learning/Python/python-practice-examples/Dattabavni_Gatha.pdf')"
+    "def main():\n",
+    "    # 'C:/Users/Nirav Joshi/Downloads/Dattabavni_Gatha.pdf'\n",
+    "    source_file_path = input('Please provide absolute file path which we want to move:')\n",
+    "    if len(source_file_path) == 0:\n",
+    "        print('Please provide value for absolute file path')\n",
+    "        return\n",
+    "\n",
+    "    # 'C:/NJ/Learning/Python/python-practice-examples'\n",
+    "    destination_folder_path = input('Please provide destination folder path where we want to move file:')\n",
+    "    if len(destination_folder_path) == 0:\n",
+    "        print('Please provide value for destination folder path')\n",
+    "        return\n",
+    "    \n",
+    "    move_file(source_file_path, destination_folder_path)    \n",
+    "    #move_dir('C:/Users/Nirav Joshi/Downloads/Dattabavni_Gatha.pdf','C:/NJ/Learning/Python/python-practice-examples/Dattabavni_Gatha.pdf')\n",
+    "\n",
+    "main()"
    ]
   },
   {
@@ -771,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "89cafbfc",
    "metadata": {},
    "outputs": [
@@ -781,9 +796,9 @@
      "text": [
       "Please provide from email Id:joshi.nirav21@gmail.com\n",
       "Please provide password for your above entered email id:kzegjjhbmwltuwqt\n",
-      "Please enter to email Id(s) , if you want multiple emailIds into To then enter them comma separated:joshinirav.j2ee@gmail.com,njjoshi0686@gmail.com\n",
-      "Please enter subject value:Hi from NJ\n",
-      "Please provide value for email body:Hi Nirav, This is python mail sender utility sending you email\n"
+      "Please enter to email Id(s) , if you want multiple emailIds into To then enter them comma separated:joshinirav.j2ee@gmail.com\n",
+      "Please enter subject value:Test Mail\n",
+      "Please provide value for email body:Test Mail\n"
      ]
     },
     {
@@ -803,23 +818,20 @@
       "send: 'AUTH PLAIN AGpvc2hpLm5pcmF2MjFAZ21haWwuY29tAGt6ZWdqamhibXdsdHV3cXQ=\\r\\n'\n",
       "reply: b'235 2.7.0 Accepted\\r\\n'\n",
       "reply: retcode (235); Msg: b'2.7.0 Accepted'\n",
-      "send: 'mail FROM:<joshi.nirav21@gmail.com> size=169\\r\\n'\n",
-      "reply: b'250 2.1.0 OK m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
-      "reply: retcode (250); Msg: b'2.1.0 OK m19sm31987154pfk.218 - gsmtp'\n",
+      "send: 'mail FROM:<joshi.nirav21@gmail.com> size=92\\r\\n'\n",
+      "reply: b'250 2.1.0 OK v14sm45325419pfu.14 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.1.0 OK v14sm45325419pfu.14 - gsmtp'\n",
       "send: 'rcpt TO:<joshinirav.j2ee@gmail.com>\\r\\n'\n",
-      "reply: b'250 2.1.5 OK m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
-      "reply: retcode (250); Msg: b'2.1.5 OK m19sm31987154pfk.218 - gsmtp'\n",
-      "send: 'rcpt TO:<njjoshi0686@gmail.com>\\r\\n'\n",
-      "reply: b'250 2.1.5 OK m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
-      "reply: retcode (250); Msg: b'2.1.5 OK m19sm31987154pfk.218 - gsmtp'\n",
+      "reply: b'250 2.1.5 OK v14sm45325419pfu.14 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.1.5 OK v14sm45325419pfu.14 - gsmtp'\n",
       "send: 'data\\r\\n'\n",
-      "reply: b'354  Go ahead m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
-      "reply: retcode (354); Msg: b'Go ahead m19sm31987154pfk.218 - gsmtp'\n",
-      "data: (354, b'Go ahead m19sm31987154pfk.218 - gsmtp')\n",
-      "send: b'From: joshi.nirav21@gmail.com\\r\\nTo: joshinirav.j2ee@gmail.com, njjoshi0686@gmail.com\\r\\nSubject:Hi from NJ\\r\\n\\r\\nHi Nirav, This is python mail sender utility sending you email\\r\\n.\\r\\n'\n",
-      "reply: b'250 2.0.0 OK  1641267582 m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
-      "reply: retcode (250); Msg: b'2.0.0 OK  1641267582 m19sm31987154pfk.218 - gsmtp'\n",
-      "data: (250, b'2.0.0 OK  1641267582 m19sm31987154pfk.218 - gsmtp')\n",
+      "reply: b'354  Go ahead v14sm45325419pfu.14 - gsmtp\\r\\n'\n",
+      "reply: retcode (354); Msg: b'Go ahead v14sm45325419pfu.14 - gsmtp'\n",
+      "data: (354, b'Go ahead v14sm45325419pfu.14 - gsmtp')\n",
+      "send: b'From: joshi.nirav21@gmail.com\\r\\nTo: joshinirav.j2ee@gmail.com\\r\\nSubject:Test Mail\\r\\n\\r\\nTest Mail\\r\\n.\\r\\n'\n",
+      "reply: b'250 2.0.0 OK  1641270343 v14sm45325419pfu.14 - gsmtp\\r\\n'\n",
+      "reply: retcode (250); Msg: b'2.0.0 OK  1641270343 v14sm45325419pfu.14 - gsmtp'\n",
+      "data: (250, b'2.0.0 OK  1641270343 v14sm45325419pfu.14 - gsmtp')\n",
       "send: 'quit\\r\\n'\n"
      ]
     },
@@ -834,8 +846,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "reply: b'221 2.0.0 closing connection m19sm31987154pfk.218 - gsmtp\\r\\n'\n",
-      "reply: retcode (221); Msg: b'2.0.0 closing connection m19sm31987154pfk.218 - gsmtp'\n"
+      "reply: b'221 2.0.0 closing connection v14sm45325419pfu.14 - gsmtp\\r\\n'\n",
+      "reply: retcode (221); Msg: b'2.0.0 closing connection v14sm45325419pfu.14 - gsmtp'\n"
      ]
     }
    ],
@@ -875,7 +887,7 @@
     "    # Disconnect\n",
     "    smtp_server.quit()\n",
     "\n",
-    "def validEmailId(email_id):\n",
+    "def validEmailId(email_id) -> bool:\n",
     "    \"\"\"\n",
     "    This function will validate email id returns a boolean\n",
     "    \"\"\"\n",
