Added solution for assignment 11 : to play video file

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -501,13 +501,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a165c5af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter file name (with extension .mp4):file_example_MP4_640_3MG.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "## Assignment 11\n",
-    "## write a function which can read video file and play for you\n"
+    "## write a function which can read video file and play for you\n",
+    "import cv2\n",
+    "\n",
+    "def play_video_file(file_name):\n",
+    "    \"\"\"\n",
+    "    This function will going to open a separate frame to play .mp4 video file\n",
+    "    file_name: file name with .mp4 extension\n",
+    "    \"\"\"\n",
+    "    cap = cv2.VideoCapture(file_name)\n",
+    "\n",
+    "    #check if the video capture is open\n",
+    "    if(cap.isOpened() == False):\n",
+    "        print(\"Error Opening Video Stream Or File\")\n",
+    "\n",
+    "    while(cap.isOpened()):    \n",
+    "        ret, frame =cap.read()\n",
+    "        if ret == True:\n",
+    "            cv2.imshow('frame', frame)\n",
+    "            if cv2.waitKey(25)  == ord('q'):\n",
+    "                break\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "def main():\n",
+    "    file = input('Please enter file name (with extension .mp4):')\n",
+    "    #'file_example_MP4_640_3MG.mp4'\n",
+    "    if len(file) > 0 :\n",
+    "        if file.endswith('.mp4'):\n",
+    "            play_video_file(file)\n",
+    "        else:\n",
+    "            print('Invalid file provided. Please provide .mp4 file to play')\n",
+    "            return\n",
+    "    else:\n",
+    "        print('Please enter valid file name')\n",
+    "        return\n",
+    "\n",
+    "main()"
    ]
   },
   {
